assets/css/style.scss
---
---

@import "{{ site.theme }}";

header > h1 > a {
  color: inherit;
}

h1 {
  margin-top: 20px;
}

h2, h3, h4 {
  margin-top:  10px;
  margin-bottom: 10px;
}

blockquote {
  margin: 10px 10px 10px 10px;
  padding-left: 10px;
}

code {
  background-color: #e1f2fc;
}

body {
  color: #505050;
}

#headshot {
  width: 125px; 
  height: 125px; 
  float: right;
  border: solid 3px darkgray;
}

li > ul {
  margin: 0px;
}

// Image-holding table
table.tr-caption-container {
  margin-top: 1em;
  clear: both;
}

td.tr-caption {
 width: 90%;
}

img {
  border: 1px grey solid;
  max-width: 90%;
  margin: 0 5% 0 5%;
  }

img + strong {
  display: block; 
  color: #036;
  width: 90%;
  margin: 0 5% 0 5%;
  text-align: center;
  font-weight: 100;
  font-size: smaller;
}

